8.2.3 (26-01-2022)
- Bug Fix: Add missing exception labels
- Bug Fix: Throw correct exception, to translate the message in presentation
- Bug Fix: Fix person fiscal number validation, in person customer creation
- Improvement: Export observations and termsAndConditions fields of settlement note

8.2.2 (04-01-2022)
- Bug Fix: In close debts academic debt generation rules, check if degree curricular plan, active in registration in the execution year, is in the list of DCPs associated with the rule  

8.2.1 (06-12-2021)
- Improvement: Add academic treasury event type
- Bug Fix: Check of AcademicTariff.maximumAmount is not negative

8.2.0 (19-11-2021)
- Improvement: Throw exception when create a person customer to a person already with person customer
- Bug Fix: Only write ingressionType if it is set in the registration
- Refactor: Handler for settlement note payment, equal to declared in AcademicTreasuryBridgeImpl
- New Fixture: Reservation taxes, which can discount amount from tuition debts
- Improvement: Allow set interest type in AcademicTreasuryTargetCreateDebtBuilder
- Bug Fix: Get execution year name from treasury event target
- Refactor: Predicates in TreasuryEvent to check if it is related with tuition debts, and if the event discount on tuition total amount
- Refactor: Handle settlement note payment to HandleSettlementNotePayment class



8.1.1 (09-11-2021)
- Bug Fix: Align headers in debt reports

8.1.0 (25-10-2021)
- Improvement: Add method to find academic custom debt AcademicTreasuryEvent 
- Improvement: Change API of academic debt builder to receive the required DateTime when parameter

8.0.4 (24-09-2021)
- Bug Fix: Refer to extracurricular tuition group when creating infered tuition for extra curricular course, instead of standalone tuition group

8.0.3 (16-09-2021)
- Improvement: Add date to key of description of custom calculator in Tuition payment plan 